--- a/Client/productpage.html
+++ b/Client/productpage.html
@@ -2,7 +2,6 @@
 <html lang="en">
    <head>
       <meta charset="UTF-8">
-      <title>Chamb - Responsive E-commerce HTML5 Template</title>
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <!--enable mobile device-->
       <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -50,10 +49,10 @@
                    <div class="help-r hidden-xs">
                      <div class="help-box">
                        <ul>
-                         <li>
-                           <a data-toggle="modal" data-target="#myModal" href="#">
+                        <li id="userdata" style="display: none;">
+                           <a data-toggle="modal"  href="/profile.html">
                              <img height="40px" width="40px" src="./assets/images/person.png" alt="" />
-                             <span id="useremail">My Account</span>
+                             <span id="useremail"></span>
                            </a>
                          </li>
                          <li>
@@ -102,7 +101,7 @@
             <div class="container">
                <div class="row">
                   <ol class="breadcrumb">
-                     <li><a href="#">Forntpage </a></li>
+                     <li><a href="index.html">Home </a></li>
                      <li class="active" id="productcat"></li>
                      <li id="producttitlehead"></li>
                   </ol>
