--- a/Client/SignUp.html
+++ b/Client/SignUp.html
@@ -67,39 +67,34 @@
               ">
             <div class="card-body p-5 shadow-5 text-center">
               <h2 class="fw-bold mb-5">Sign up now</h2>
-              <form onsubmit="validateForm()">
                 <!-- 2 column grid layout with text inputs for the first and last names -->
                 <div class="row">
                   <div class="col-md-6 mb-4">
                     <div class="form-outline">
-                      <input type="text" id="fname" class="form-control" required />
-                      <label class="form-label label-one" for="form3Example1">First name</label>
+                      <input type="text" id="fname" class="form-control" />
+                      <label class="form-label" for="form3Example1">First name</label>
                     </div>
                   </div>
                   <div class="col-md-6 mb-4">
                     <div class="form-outline">
-                      <input type="text" id="secname" class="form-control" required />
-                      <label class="form-label label-two " for="form3Example2">Last name</label>
+                      <input type="text" id="lname" class="form-control" />
+                      <label class="form-label" for="form3Example2">Last name</label>
                     </div>
                   </div>
                 </div>
   
                 <!-- Email input -->
                 <div class="form-outline mb-4">
-                  <input type="email" id="email" class="form-control" required placeholder="123@...." />
+                  <input type="email"  class="form-control" id="email" />
                   <label class="form-label" for="form3Example3">Email address</label>
                 </div>
   
                 <!-- Password input -->
                 <div class="form-outline mb-4">
-                  <input type="password"  class="form-control " id="pass1" value="" required placeholder="Passwords must be at least 6 characters." />
-                  <label class="form-label label-three ">Password</label>
+                  <input type="password" class="form-control" id="password"/>
+                  <label class="form-label" for="form3Example4">Password</label>
                 </div>
-                <!-- confirm Password input -->
-                <div class="form-outline mb-4">
-                  <input type="password"  class="form-control " id="pass2" value="" required />
-                  <label class="form-label label-four" for="form3Example4">confirm Password</label>
-                </div>
+  
                 <!-- Checkbox -->
                 <div class="form-check d-flex justify-content-center mb-4">
                     
@@ -109,10 +104,9 @@
                 </div>
                
                 <!-- Submit button -->
-                <button type="submit" class="btn btn-primary btn-sginup log  btn-block mb-4">
+                <button  class="btn btn-primary btn-sginup  btn-block mb-4" id="signupbtn">
                   Sign up
                 </button>
-             </form>
             </div>
           </div>
         </div>
@@ -126,6 +120,7 @@
     <!-- Jumbotron -->
   </section>
   <!-- Section: Design Block -->
-  <script src="js/main.js"></script>
+  
   </body>
+  <script src="/js/signup.js"></script>
 </html>
