--- a/Client/login.html
+++ b/Client/login.html
@@ -78,8 +78,8 @@
                       <label class="form-label" for="form3Example4">Password</label>
                     </div>               
                     <!-- Submit button -->
-                    <button  class="btn btn-primary btn-sginup btn-block mb-4" id="loginbtn"><a href="" style="color:#fff">Login</a>
-                      
+                    <button  class="btn btn-primary btn-sginup btn-block mb-4" id="loginbtn">
+                      Login
                     </button>
                 </div>
               </div>
